--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "persistful",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "start": "next dev -p 1234",
     "build": "next build",
-    "start": "next start",
+    "serve": "next start -p 1234",
     "lint": "next lint"
   },
   "dependencies": {
