--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "sass": "^1.45.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.4",
+    "@types/node": "17.0.5",
     "@types/react": "17.0.38",
-    "eslint": "8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^8.5.0",
     "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
+    "typescript": "^4.5.4",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1"
   }
 }
