--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
+    "typescript-plugin-css-modules": "^3.4.0",
     "eslint": "^8.5.0",
-    "eslint-config-next": "12.0.7",
-    "typescript": "^4.5.4",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   }
 }
