--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^4.2.2",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.6",
