--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@next-auth/mongodb-adapter": "^1.0.1",
     "axios": "^0.24.0",
+    "formidable": "^2.0.1",
     "framer-motion": "^5.5.5",
     "mongodb": "^4.2.2",
     "next": "12.0.7",
@@ -25,6 +26,7 @@
     "sass": "^1.45.1"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.3",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
