--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/pro-regular-svg-icons": "^5.15.4",
     "@fortawesome/pro-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@google-cloud/storage": "^5.18.0",
     "@next-auth/mongodb-adapter": "^1.0.1",
     "axios": "^0.24.0",
     "formidable": "^2.0.1",
