--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^4.2.2",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
+    "next-pwa": "^5.4.4",
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
