--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.6",
-    "sass": "^1.45.1"
+    "sass": "^1.45.1",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@types/formidable": "^2.0.3",
