--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,8 +14,8 @@
       "type": "image/png"
     },
     {
-      "src": "/logo/logo@3x.png",
-      "sizes": "576x576",
+      "src": "/logo/logo@512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
