--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,20 +3,37 @@
   "short_name": "Persistful",
   "icons": [
     {
-      "src": "/logo/logo.png",
+      "src": "/logo/logo@192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "/logo/logo@2x.png",
+      "src": "/logo/logo-masked@192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/logo/logo@384.png",
       "sizes": "384x384",
       "type": "image/png"
+    },
+    {
+      "src": "/logo/logo-masked@384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
       "src": "/logo/logo@512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "/logo/logo-masked@512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "theme_color": "#18e597",
