--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/storage": "^5.18.0",
     "@next-auth/mongodb-adapter": "^1.0.1",
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
     "formidable": "^2.0.1",
     "framer-motion": "^5.5.5",
     "mongodb": "^4.2.2",
@@ -23,6 +24,7 @@
     "next-pwa": "^5.4.4",
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
+    "react-day-picker": "^8.0.4",
     "react-dom": "17.0.2",
     "react-query": "^3.34.6",
     "sass": "^1.45.1",
