--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.28.0",
     "formidable": "^2.0.1",
     "framer-motion": "^5.5.5",
+    "lodash": "^4.17.21",
     "mongodb": "^4.2.2",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/formidable": "^2.0.3",
+    "@types/lodash": "^4.14.182",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
