--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/formidable": "^2.0.3",
     "@types/lodash": "^4.14.182",
     "@types/node": "17.0.5",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
