--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "serve": "next start -p 1234",
     "lint": "next lint"
   },
+  "volta": {
+    "node": "17.3.0",
+    "npm": "8.3.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/pro-regular-svg-icons": "^6.1.1",
