--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "17.0.2",
     "react-query": "^3.34.6",
     "sass": "^1.45.1",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "web-push": "^3.6.6"
   },
   "devDependencies": {
     "@types/formidable": "^2.0.3",
@@ -41,6 +42,7 @@
     "@types/node": "17.0.5",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.38",
+    "@types/web-push": "^3.6.3",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0",
