--- a/package.json
+++ b/package.json
@@ -8,50 +8,49 @@
     "lint": "next lint"
   },
   "volta": {
-    "node": "17.3.0",
-    "npm": "8.3.0"
+    "node": "20.11.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/pro-regular-svg-icons": "^6.1.1",
-    "@fortawesome/pro-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "@google-cloud/storage": "^5.18.0",
-    "@next-auth/mongodb-adapter": "^1.0.1",
-    "axios": "^0.24.0",
-    "date-fns": "^2.28.0",
-    "formidable": "^2.0.1",
-    "framer-motion": "^5.5.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/pro-regular-svg-icons": "^6.5.1",
+    "@fortawesome/pro-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@google-cloud/storage": "^7.7.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "axios": "^1.6.5",
+    "date-fns": "^3.2.0",
+    "formidable": "^3.5.1",
+    "framer-motion": "^10.18.0",
     "lodash": "^4.17.21",
-    "mongodb": "^4.2.2",
-    "next": "12.0.7",
-    "next-auth": "^4.0.6",
-    "next-pwa": "^5.4.4",
-    "nodemailer": "^6.7.2",
-    "react": "17.0.2",
-    "react-day-picker": "^8.0.4",
-    "react-dom": "17.0.2",
-    "react-query": "^3.34.6",
-    "sass": "^1.45.1",
-    "sharp": "^0.29.3",
-    "web-push": "^3.6.6"
+    "mongodb": "^5.9.2",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "next-pwa": "^5.6.0",
+    "nodemailer": "^6.9.8",
+    "react": "18.2.0",
+    "react-day-picker": "^8.10.0",
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "sass": "^1.69.7",
+    "sharp": "^0.33.2",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
-    "@types/formidable": "^2.0.3",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "17.0.5",
-    "@types/nodemailer": "^6.4.4",
-    "@types/react": "17.0.38",
+    "@types/formidable": "^3.4.5",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "20.11.5",
+    "@types/nodemailer": "^6.4.14",
+    "@types/react": "18.2.48",
     "@types/web-push": "^3.6.3",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.0.7",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.4",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.4",
+    "typescript": "^5.3.3",
+    "typescript-plugin-css-modules": "^5.0.2"
   }
 }
