--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.4",
-    "typescript": "^5.3.3",
-    "typescript-plugin-css-modules": "^5.0.2"
+    "typescript": "^5.3.3"
   }
 }
