--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "next dev -p 1234",
     "build": "next build",
     "serve": "next start -p 1234",
-    "lint": "next lint"
+    "lint": "next lint",
+    "notification_cron": "tsx scripts/notification_cron.ts"
   },
   "volta": {
     "node": "20.11.0"
@@ -19,6 +20,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.6.5",
     "date-fns": "^3.2.0",
+    "dotenv": "^16.3.1",
     "formidable": "^2.0.1",
     "framer-motion": "^10.18.0",
     "lodash": "^4.17.21",
@@ -26,6 +28,8 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-pwa": "^5.6.0",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
@@ -39,6 +43,7 @@
     "@types/formidable": "^2.0.3",
     "@types/lodash": "^4.14.202",
     "@types/node": "20.11.5",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.48",
     "@types/web-push": "^3.6.3",
@@ -50,6 +55,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.4",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
 }
