--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "next dev -p 1234",
     "build": "next build",
     "serve": "next start -p 1234",
-    "lint": "next lint",
+    "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "notification_cron": "tsx scripts/notification_cron.ts"
   },
   "volta": {
