--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@google-cloud/storage": "^7.7.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.6.5",
+    "d3": "^7.9.0",
     "date-fns": "^3.2.0",
     "dotenv": "^16.3.1",
     "formidable": "^2.0.1",
@@ -40,6 +41,7 @@
     "web-push": "^3.6.7"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/formidable": "^2.0.3",
     "@types/lodash": "^4.14.202",
     "@types/node": "20.11.5",
